--- a/views/index.pug
+++ b/views/index.pug
@@ -15,4 +15,9 @@ html(lang='es')
     // Calendario
     div#calendar
 
+    // Contenedor para mostrar los turnos
+    div#turnos-container
+      h2 Turnos disponibles
+      div#turnos-container
+
     script(src='/js/index.js')
