--- a/views/index.pug
+++ b/views/index.pug
@@ -20,4 +20,13 @@ html(lang='es')
       h2 Turnos disponibles
       div#turnos-container
 
+    div#modalAgendarTurno.modal.hidden
+      div.modal-content
+        h2 Agendar Turno
+        label(for='dniPaciente') DNI del Paciente:
+        input#dniPaciente(type='text', placeholder='Ingrese DNI')
+        div.modal-actions
+          button#cancelarBtn(class='btn-cancelar') Cancelar
+          button#agendarBtn(class='btn-agendar') Agendar
+
     script(src='/js/index.js')
