--- a/views/index.pug
+++ b/views/index.pug
@@ -25,6 +25,9 @@ html(lang='es')
         h2 Agendar Turno
         label(for='dniPaciente') DNI del Paciente:
         input#dniPaciente(type='text', placeholder='Ingrese DNI')
+        p#modal-medico
+        p#modal-hora
+        p#modal-fecha
         div.modal-actions
           button#cancelarBtn(class='btn-cancelar') Cancelar
           button#agendarBtn(class='btn-agendar') Agendar
