--- a/views/partials/_header.pug
+++ b/views/partials/_header.pug
@@ -1,4 +1,4 @@
 .header
-  button#pedir-turno Pedir Turno
+  button#pedir-turno(onclick="window.location.href='/'") Pedir Turno
   button#administrar(onclick="window.location.href='/administrador'") Administrar
-  button#ver-turnos Ver Turnos
+  button#ver-turnos(onclick="window.location.href='/'") Ver Turnos
